# Worclaude

./: .gitignore  .npmignore  .prettierignore  .snyk  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.manual-backup  CONTRIBUTING.md  IMPLEMENTATION-PROMPT-PHASE1-FIXES.md  IMPLEMENTATION-PROMPT-PHASE1-UX.md  IMPLEMENTATION-PROMPT-PHASE1.md  README.md  RELEASE-NOTES-v2.4.2.md  SECURITY.md  eslint.config.js  hashmap.json  index.html  package-lock.json  package.json  socket.yml
.claude/: settings.json  workflow-meta.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  upstream-state.json
.socket/: manifest.json
assets/: app.xJKmesZj.js  demo_index.md.DpzqParu.js  demo_index.md.DpzqParu.lean.js  demo_index.md.bsIqS7GN.js  demo_index.md.bsIqS7GN.lean.js  guide_existing-projects.md.BGLm_z7K.js  guide_existing-projects.md.BGLm_z7K.lean.js  guide_getting-started.md.B_RbysFH.js  guide_getting-started.md.B_RbysFH.lean.js  guide_introduction.md.BznrxL_x.js  guide_introduction.md.BznrxL_x.lean.js  guide_upgrading.md.B9iz99Ws.js  guide_upgrading.md.B9iz99Ws.lean.js  guide_workflow-tips.md.C0Vre-0-.js  guide_workflow-tips.md.C0Vre-0-.lean.js  index.md.Dlg2KHQK.js  reference_agents.md.CDntG0cZ.js  reference_agents.md.CDntG0cZ.lean.js  reference_claude-md.md.B1-ruu6w.js  reference_claude-md.md.B1-ruu6w.lean.js  reference_commands.md.BynPv5fk.js  reference_commands.md.BynPv5fk.lean.js  reference_configuration.md.bZ69C5C1.js  reference_configuration.md.bZ69C5C1.lean.js  style.CRXHIscq.css  (+9 more)
tests/fixtures/scanner/fastapi-poetry/: alembic.ini  pyproject.toml
(+405 files in other folders)
